--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -174,6 +174,12 @@ label {
 
 #deliver-deliverTable table tr {
 	display:flex;
+	border-bottom:1px solid #dadada;
+}
+
+#deliver-deliverTable table thead {
+	float:left;
+	width:100%;
 }
 
 #deliver-deliverTable table tr td,
@@ -182,11 +188,12 @@ label {
 	flex:1;
 	overflow:hidden;
 	flex-basis:100px;
+	box-sizing: border-box;
+	border-top:none;
 }
 
 #deliver-deliverTable table tr th {
-	word-break: break-word;
-	box-sizing: border-box;
+	word-break: normal;
 }
 
 #deliver-deliverTable table tbody tr td.smallPadding {
@@ -195,7 +202,14 @@ label {
 
 #deliver-deliverTable table .status {
 	flex-grow:0;
-	flex-basis:100px;
+	flex-basis:135px;
+	flex-shrink: 0;
+}
+
+#deliver-deliverTable table .description {
+	flex-grow:1;
+	flex-shrink:0;
+	flex-basis:200px;
 }
 
 #deliver-deliverTable table .documentation-status,
@@ -204,8 +218,10 @@ label {
 #deliver-deliverTable table .source,
 #deliver-deliverTable table .products,
 #deliver-deliverTable table .instruments {
-	flex-grow:0;
+	flex-grow:1;
+	flex-shrink:0;
 	flex-basis: 80px;
+	max-width:100px;
 }
 
 #deliver-deliverTable table .entry-id,
@@ -214,8 +230,10 @@ label {
 #deliver-deliverTable table .announcement-date,
 #deliver-deliverTable table .removal-date,
 #deliver-deliverTable table .implementation-date {
-	flex-grow:0;
+	flex-grow:1;
+	flex-shrink:0;
 	flex-basis: 50px;
+	max-width:80px;
 }
 
 /*------------------------------------HERE GOES LG STYLE DECLARATIONS ------------------------------------------ */
@@ -358,8 +376,8 @@ table .instr-label {
 
 .buttons-column {
 	display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 0px;
   padding: calc(5px + 0.2vw);
 }
 
