--- a/www/main/style.css
+++ b/www/main/style.css
@@ -235,6 +235,16 @@ button.blue:active {
   left: calc(20px + 1vw);
 }
 
+.header.sticky {
+	width:auto;
+	display:flex;
+	position: fixed;
+	transition:all 0.2s ease-out;
+	z-index: 8;
+	top: calc(20px + 1vw);
+  left: 0;
+}
+
 .header .left {
 	display:flex;
 	flex:1;
@@ -249,11 +259,12 @@ button.blue:active {
 	transition:all 0.2s ease-out;
 	padding:5px;
 	box-sizing: content-box;
-	border-radius: 5px;
+	border-radius: 0px 5px 5px 0px;
 	cursor:pointer;
 }
 
 .header.sticky .left img {
+	width:20px;
 	transition:all 0.2s ease-out;
 	background-color:rgba(255,255,255,0.5);
 	-webkit-backdrop-filter: blur(15px) saturate(200%) contrast(120%);
