--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -621,63 +621,81 @@ tr.deleted .status-column {
 }
 
 .keep-row {
-    width: 100%;
-    left: 0px;
-    background-color: rgba(243, 210, 63, 0.7);
-    position: absolute;
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    border: 2px solid floralwhite;
+	width: 100%;
+	left: 0px;
+	background: linear-gradient(0deg, #11529280, #4fa5fb29);
+	position: absolute;
+	display: flex;
+	justify-content: flex-start;
+	align-items: left;
+	flex-direction: row;
+	padding: 10px;
 }
 
 .keep-row p {
-  position: absolute;
-  font-size: 2em;
-  font-weight: 800;
-  margin-left: 20px;
+	font-size: 1.2em;
+	font-weight: 700;
+	margin-right: 20px;
+	color: #FFFFFF;
+	text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+	display: flex;
+	margin: 0;
+	align-items: flex-end;
+	flex: 1;
 }
 
 .remove-row {
     width: 100%;
     left: 0px;
-    background-color: rgba(197, 43, 76, 0.7);
+    background: linear-gradient(0deg, #ffc8008f, #ffbf001f);
     position: absolute;
     display: flex;
-    justify-items: center;
-    align-items: center;
-    border: 2px solid floralwhite;
+    justify-content: flex-start;
+    align-items: flex-end;
+		padding:10px;
 }
 
 .remove-row p {
-  font-size: 2em;
-  font-weight: 800;
-  margin-left: 50px;
+	font-size: 1.2em;
+	font-weight: 700;
+	margin-right: 20px;
+	color: #FFFFFF;
+	text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+	display: flex;
+	margin: 0;
+	align-items: flex-end;
+	flex: 1;
 }
 
 input#save-dupl{
-    margin-right: 10px;
-    padding: 0.3em 1.2em;
-    border-radius: 2em;
-    font-weight: 600;
-    color: #FFFFFF;
-    background-color: rgba(242, 49, 49, 1);
-    text-align: center;
+	margin-left: 10px;
+  padding: 0.3em 1.2em;
+  border-radius: 2em;
+  font-weight: 600;
+  color: #FFFFFF;
+  background-color: rgba(242, 49, 49, 1);
+  text-align: center;
+  border: none;
+  height: 30px;
 }
 
 input#cancel-dupl{
-    margin-right: 10px;
-    padding: 0.3em 1.2em;
-    border-radius: 2em;
-    font-weight: 600;
-    color: #FFFFFF;
-    text-align: center;
-    background-color: rgba(49, 168, 242, 1);
+	margin-left: 10px;
+  padding: 0.3em 1.2em;
+  border-radius: 2em;
+  font-weight: 600;
+  color: #595959;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  height: 30px;
 }
 
 .dupl-buttons{
-  position: absolute;
-  left: 45%;
+  display: flex;
+  flex: 1;
+  flex-grow: 0;
+  align-items: flex-end;
 }
 
 .overlay{
