--- a/www/b221/style.css
+++ b/www/b221/style.css
@@ -1163,7 +1163,7 @@ table.dataTable thead .sorting_desc {
 	background-color:#175da2;
 	transition:background-color 0.2s ease-out;
 }
-  
+
 #confirm-discard {
   position: fixed !important;
 	opacity:0;
@@ -1209,6 +1209,7 @@ table.dataTable thead .sorting_desc {
 	display:grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 20px;
+	margin-top:20px;
 }
 
 #confirm-discard .confirm-discard-inner button {
