--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -508,7 +508,7 @@ tr.deleted .status-column {
 	flex:1;
 }
 
-.editMode .editMode-header #save-edit {
+.editMode .editMode-header #save-edit, .saveMode .saveMode-header #save-xlsx {
 	display:flex;
 	flex:1;
 	flex-grow: 0;
@@ -998,3 +998,19 @@ td.addPadding {
     cursor: pointer;
 }
 
+.saveMode {
+	width: 90vw;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  background-color: #1874CD;
+  z-index: 99999;
+  max-width: 600px;
+	transition:left 0.5s ease-out;
+}
+
+.saveMode.show {
+  visibility: visible !important;
+	left:0;
+	box-shadow:3px 0px 25px rgba(0,0,0,0.2);
+}
