--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -483,13 +483,14 @@ tr.deleted .status-column {
 	overflow-y: scroll;
 }
 
+
 .editMode.show {
 	transition:left 0.5s ease-out;
 	left:0;
 	box-shadow:3px 0px 25px rgba(0,0,0,0.2);
 }
 
-.editMode h1, .duplicatesMode h1 {
+.editMode h1, .duplicatesMode h1, .saveMode h1 {
 	text-align: left;
   font-size: 2.5em;
   font-weight: 100;
@@ -497,13 +498,17 @@ tr.deleted .status-column {
 	margin:0;
 }
 
-.editMode .editMode-header {
+.editMode .editMode-header, .saveMode .saveMode-header {
 	display:flex;
 	background-color: rgba(0,0,0,0.2);
   padding: calc(10px + 1vw);
 }
 
-.editMode .editMode-header h1 {
+.saveMode .saveMode-header {
+  border-radius: 10px 10px 0px 0px;
+}
+
+.editMode .editMode-header h1, .saveMode .saveMode-header h1 {
 	display:flex;
 	flex:1;
 }
@@ -521,12 +526,12 @@ tr.deleted .status-column {
 	transition:all 0.5s ease-out;
 }
 
-.editMode .editMode-header #save-edit:hover {
+.editMode .editMode-header #save-edit:hover, .saveMode .saveMode-header #save-xlsx:hover {
 	background-color:rgba(0,0,0,0.4);
 	transition:all 0.5s ease-out;
 }
 
-.editMode .editMode-header #save-edit img {
+.editMode .editMode-header #save-edit img, .saveMode .saveMode-header #save-xlsx img {
 	margin-right: 10px;
 	height: 20px;
 }
@@ -554,6 +559,15 @@ tr.deleted .status-column {
 	grid-template-columns: 1fr 1fr;
 	grid-gap: calc(5px + 0.5vw);
 	margin-top: calc(5px + 0.5vw);
+}
+
+.save-cols {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 0px;
+  margin-top: 1px;
+  text-align: center;
+  font-size: 0.8em;
 }
 
 .canvas .form-grid > div {
@@ -992,7 +1006,7 @@ td.addPadding {
 }
 
 .search-pane-export-xlsx{
-    width: 30px;
+    width: 3em;
     height: 100%;
     margin-left: 5px;
     cursor: pointer;
@@ -1000,17 +1014,19 @@ td.addPadding {
 
 .saveMode {
 	width: 90vw;
-  height: 100%;
+  height: 30vh;
   position: fixed;
-  top: 0px;
+  top: 30vh;
+  left: 30vw;
   background-color: #1874CD;
   z-index: 99999;
   max-width: 600px;
-	transition:left 0.5s ease-out;
+  border-radius: 10px;
+	/*transition:left 0.5s ease-out;*/
 }
 
 .saveMode.show {
   visibility: visible !important;
-	left:0;
+	/*left:0;*/
 	box-shadow:3px 0px 25px rgba(0,0,0,0.2);
 }
