--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -507,6 +507,35 @@ tr.deleted .status-column {
 	box-shadow:3px 0px 25px rgba(0,0,0,0.2);
 }
 
+.editMode #close-editMode {
+
+}
+
+.editMode #close-editMode {
+    height: 40px;
+    width: 40px;
+    border-radius:5px;
+		border:none;
+    display: flex;
+    justify-content: center;
+		margin-left:10px;
+    align-items: center;
+    cursor: pointer;
+		transition:all 0.2s ease-out;
+		background-color: rgba(0,0,0,0.2);
+}
+
+.editMode #close-editMode:hover {
+		transition:all 0.2s ease-out;
+		background-color: rgba(0,0,0,0.4);
+}
+
+.editMode #close-editMode span {
+		color:#FFFFFF;
+		font-weight:900;
+		font-size: 2em;
+}
+
 .editMode h1, .duplicatesMode h1 {
 	text-align: left;
   font-size: 2.5em;
