--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -180,21 +180,21 @@ label {
 }
 
 #deliver-deliverTable table td.edited {
-	border-top: 5px solid rgb(255, 226, 16);
+	/* border-top: 5px solid rgb(255, 226, 16); */
 	box-shadow: inset 0px 0px 40px rgba(255, 225, 13, 0.5);
 }
 
 
 #deliver-deliverTable table tr .edited-icon {
 	position: absolute;
-  bottom: 10px;
+  bottom: 5px;
   padding: 3px 15px;
   background-color: #ffe210;
   border-radius: 20px;
   color: #a57e0b;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
-  left: 50%;
-  transform: translateX(-50%);
+  left: 5px;
+  font-size: 0.8em;
 }
 
 #deliver-deliverTable table thead {
@@ -920,6 +920,9 @@ input#cancel-dupl{
   justify-content: center;
 	height:30px;
 	align-items: center;
+}
+
+.deliver #deliver-deliverTable .dtsp-panesContainer .dtsp-titleRow .dtsp-clearAll {
 }
 
 
